Fixed Previewing data not showing table content #780 Issue: https://github.com/xdan/jodit/issues/780

--- a/src/plugins/table/table.less
+++ b/src/plugins/table/table.less
@@ -35,27 +35,7 @@
 
 .jodit-wysiwyg {
 	table {
-		max-width: 100%;
-		border: none;
-
-		margin-top: 1em;
-		margin-bottom: 1em;
-
-		border-collapse: collapse;
-		empty-cells: show;
-
-		tr {
-			user-select: none;
-
-			th,
-			td {
-				min-width: 2em;
-				padding: 0.4em;
-				border: 1px solid #bfbfbf;
-				user-select: text;
-				vertical-align: middle;
-			}
-		}
+		.jodit-tablet-style();
 	}
 }
 
