--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -116,3 +116,27 @@
 		user-select: none;
 	}
 }
+
+.jodit-tablet-style() {
+	max-width: 100%;
+	border: none;
+
+	margin-top: 1em;
+	margin-bottom: 1em;
+
+	border-collapse: collapse;
+	empty-cells: show;
+
+	tr {
+		user-select: none;
+
+		th,
+		td {
+			min-width: 2em;
+			padding: 0.4em;
+			border: 1px solid var(--color-border);
+			user-select: text;
+			vertical-align: middle;
+		}
+	}
+}
